Closed Bug 254078 Opened 22 years ago Closed 21 years ago

Flashing cursor in View Source window cannot be moved by arrow keys

Categories

(Toolkit :: View Source, defect)

x86
Windows XP
defect
Not set
minor

Tracking

()

RESOLVED FIXED

People

(Reporter: 32768, Assigned: rbs)

References

Details

(Keywords: fixed-aviary1.0, fixed1.7.5)

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7) Gecko/20040729 Firefox/0.9.1+ Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7) Gecko/20040729 Firefox/0.9.1+ Following on from #252046, this bug addresses the inability to move the carat (blinking line) using the keyboard when in the "View Source" window. In the view source window, if you click in the text somewhere a flashing cursor will appear, as if you were able to type at that point. However, it's not possible to type anything, or move the cursor using arrow keys. The cursor does nothing. Reproducible: Always Steps to Reproduce: 1. Go to View -> Page Source (or Ctrl+U) to open View Source window 2. Click somewhere inside the window where there is some text. 3. Try to move the cursor around with arrow keys Actual Results: No result (if possible, the entire window scrolls) Expected Results: Cursor can be moved around with arrow keys According to #252046 the intention behind this flashing cursor is to display the current line and column number of the cursor position in the status bar. Since the cursor is to remain, it seems reasonable that it should act more like a cursor given its appearance. I propose that you should be able to move it around with the keyboard.
Attached patch patchSplinter Review
Assignee: bugs → rbs
Status: UNCONFIRMED → ASSIGNED
Comment on attachment 155075 [details] [diff] [review] patch After all the talking (way back from bug 15364 comment 65), time for some action. Tested that the pacth has no effect on the editor. The editor never gets there. It uses a separate implementation of that interface. Also note the paranoia |caretOn || (esm && esm->GetBrowseWithCaret())| In general the second clause implies the first. That's why the other patch worked. The defensive paranoia ensures that I won't easily come back to that code.
Attachment #155075 - Flags: superreview?(bzbarsky)
Attachment #155075 - Flags: review?(bzbarsky)
Comment on attachment 155075 [details] [diff] [review] patch r+sr=bzbarsky if you add some comments explaining what the test really means and test well.
Attachment #155075 - Flags: superreview?(bzbarsky)
Attachment #155075 - Flags: superreview+
Attachment #155075 - Flags: review?(bzbarsky)
Attachment #155075 - Flags: review+
Added explanatory comments in the code and checked in.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Looks like this problem has either re-emerged or the specific problem was not addressed by the patch. I'm experiencing the problem in branch build 20040914.
Status: RESOLVED → UNCONFIRMED
Resolution: FIXED → ---
I didn't check the fix on the branch if my memory serves me right. Do you see the problem on the trunk?
Comment on attachment 155075 [details] [diff] [review] patch This was fixed on the trunk a while back. Asking a= for the Firefox aviary branch.
Attachment #155075 - Flags: approval-aviary?
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment on attachment 155075 [details] [diff] [review] patch a=asa for aviary checkin.
Attachment #155075 - Flags: approval-aviary? → approval-aviary+
Fixed on the aviary branch (Firefox).
Status: NEW → RESOLVED
Closed: 22 years ago21 years ago
Resolution: --- → FIXED
*** Bug 227978 has been marked as a duplicate of this bug. ***
This bug seems to have an aviary branch checkin associated with it. If this has landed on the aviary branch (as much as it's going to for 1.0) can you please add the "fixed-aviary1.0" keyword? Thanks.
Added "fixed-aviary1.0" keyword.
Keywords: fixed-aviary1.0
Keywords: fixed1.7.5
Product: Firefox → Toolkit
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: