per-window browse with caret: allow the caret to be moved with arrow keys on any window (e.g., viewsource) for which the caret is enabled, b=254078, r+sr=bzbarsky